--- a/react-estate/src/Components/navbar/navbar.scss
+++ b/react-estate/src/Components/navbar/navbar.scss
@@ -105,6 +105,7 @@ nav {
             }   
             input{
                 height: 20px;
+                width: 100px;
                 border: none;
                 border-radius: 0px 50px 50px 0px;
                 background-color: transparent;
