Createing a NeedHelp Page

--- a/react-estate/src/Components/navbar/navbar.scss
+++ b/react-estate/src/Components/navbar/navbar.scss
@@ -184,7 +184,7 @@ nav {
         }
         .navbarMenu{
             display: none;
-            position: absolute;
+            position: fixed;
             top: 0;
             bottom: 0;
             right: -50%;    
