--- a/react-estate/src/HomeSection/homeSection.scss
+++ b/react-estate/src/HomeSection/homeSection.scss
@@ -27,6 +27,15 @@
         border: 2px solid #4C695F;
         border-radius: 50px 50px 50px 50px;
         font-size: 17px;
+        
+        #minPrice{
+            border-left:1px solid #4C695F;
+            border-radius: 0;
+            }
+        #maxPrice{
+            border-left:1px solid #4C695F;
+            border-radius: 0;
+            }
         :focus{
             outline: none;
         }  
@@ -39,6 +48,7 @@
         font-size: 20px;
         background-color: #F4F3EF;
         color: #4C695F;      
+        
     }
     button{
         height: 40px;
@@ -59,4 +69,3 @@
         }
     }
 }
-
