--- a/react-estate/src/NeedHelp/helpOptions.scss
+++ b/react-estate/src/NeedHelp/helpOptions.scss
@@ -1,30 +1,34 @@
 @import './src/responsive.scss';
-.homeOptionSection{
+
+.homeOptionSection {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 65vh;
     background-color: #F4F3EF;
     color: #2c4139;
-    span{
+
+    span {
         color: black;
         font-weight: bold;
     }
-    @include lg{
+
+    @include lg {
         height: 100%;
         padding-top: 20px;
         padding-bottom: 20px;
     }
-    @include md{
+
+    @include md {
         display: flex;
-        flex-direction: column-reverse;  
+        flex-direction: column-reverse;
         height: 100%;
         padding-top: 20px;
         padding-bottom: 20px;
         gap: 10px;
     }
 
-    #options{
+    #options {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -33,11 +37,13 @@
         padding-left: 20px;
         gap: 10px;
         border-left: 1px solid #D6D0C5;
-        @include lg{
+
+        @include lg {
             height: 80vh;
             padding-right: 20px;
         }
-        @include md{
+
+        @include md {
             display: flex;
             flex-direction: row;
             align-items: center;
@@ -46,16 +52,18 @@
             width: 600px;
             gap: 5px;
 
-            h3{
+            h3 {
                 display: none;
             }
-        @include sm{
-            flex-wrap: wrap;
-            width: 450px;
-        }
+
+            @include sm {
+                flex-wrap: wrap;
+                width: 450px;
+            }
 
         }
-        button{
+
+        button {
             height: 40px;
             width: 200px;
             border: 1px solid #D6D0C5;
@@ -64,42 +72,50 @@
             background-color: #F4F3EF;
             color: #2c4139;
 
-            &:focus{
+            &:focus {
                 border-left: 3px solid #4C695F;
                 font-weight: bold;
             }
-            @include md{
+
+            @include md {
                 height: 30px;
                 font-size: 12px;
             }
         }
     }
-    #text{
-        display: flex;
+
+    #text {
+        //display: flex;
         flex-direction: column;
         justify-content: center;
         width: 80%;
         padding-left: 100px;
         padding-right: 100px;
         gap: 10px;
-        ul{
-        padding-left: 40px;
+
+        ul {
+            padding-left: 40px;
         }
-        li{
+
+        li {
             font-size: 16px;
             font-family: "Alata", sans-serif;
-            @include md{
+
+            @include md {
                 font-size: 14px;
             }
         }
-        @include md{
+
+        @include md {
             padding-left: 50px;
             padding-right: 50px;
         }
-        p{
+
+        p {
             font-size: 16px;
             font-family: "Alata", sans-serif;
-            @include md{
+
+            @include md {
                 font-size: 14px;
             }
         }
